@startuml

interface TelegramResponse {
    ok: Boolean
}

class TelegramException {
    description: String
    errorCode: Option[Int]
}

class Update {
    updateId: Long
    message: Option[Message]
}

class Updates {
    result: Seq[Update]
}

TelegramException -up-|> TelegramResponse
Updates -up-|> TelegramResponse
Updates *-down- Update
Update *- Message

interface Message {
   messageId: Long
   from: Option[User]
   chat: Chat
   date: Long
}

class PhotoSize {
    fileId: String
    width: Int
    height: Int
    fileSize: Option[Int]
}

class StickerMessage {
    messageId: Long
    from: Option[User]
    date: Long
    chat: Chat
    sticker: Sticker
}

class TextMessage {
 messageId: Long
 from: Option[User]
 date: Long
 chat: Chat
 text: String
}

TextMessage -up-|> Message
PhotoSize  -up-|> Message
StickerMessage -up-|> Message

@enduml